--- a/cardapio.html
+++ b/cardapio.html
@@ -31,41 +31,88 @@
       <h1>Pratos Principais</h1>
       <hr style="width: 40%" />
       <div style="display: flex">
-
         <div class="pratos">
-            <h1>Lasanha</h1>
+            <h1>Feijoada</h1>
             <section style="display: flex;">
-            <img src="img/Lasanha.jpg" alt="" />
-            <h1>A lasanha do nosso restaurante é cremosa, chinesa, com camadasirresistíveis de queijo derretido! 🍝🔥</h1>
+            <img src="img/feijoadinha.jpg" alt="" />
+            <h1>Nosso cardápio tem pratos saborosos, ingredientes frescos e opções deliciosas para você! 🍽️🔥 R$25,00</h1>
             </section>
         </div>
         <div class="pratos">
-            <h1>Strogonoff</h1>
+            <h1>Sushi</h1>
             <section style="display: flex;">
-            <img src="img/Strogonoff.jpg" alt="" />
-            <h1>Nosso strogonoff é cremoso, saboroso e servido com arroz soltinho e batata crocante! 🍛🔥</h1>
+            <img src="img/sushi.jpg" alt="" />
+            <h1>Nosso sushi é fresco, delicioso e feito com ingredientes selecionados para uma experiência incrível! 🍣✨R$30,00</h1>
             </section>
         </div>
-
+      </div>
+      <div style="display: flex">
         <div class="pratos">
-          <h1>Lasanha</h1>
-          <section style="display: flex;">
-          <img src="img/Lasanha.jpg" alt="" />
-          <h1>A lasanha do nosso restaurante é cremosa, chinesa, com camadasirresistíveis de queijo derretido! 🍝🔥</h1>
-          </section>
+            <h1>Paella</h1>
+            <section style="display: flex;">
+            <img src="img/paella.jpg" alt="" />
+            <h1>Nossa paella é rica em sabores, com frutos do mar frescos e temperos autênticos! 🥘🔥 R$45,00</h1>
+            </section>
+        </div>
+        <div class="pratos">
+            <h1>Risoto</h1>
+            <section style="display: flex;">
+            <img src="img/risoto.png" alt="" />
+            <h1>Nosso risoto é cremoso, preparado com arroz arbório, temperos especiais e ingredientes frescos! 🍛✨ R$55,00</h1>
+            </section>
+        </div>
       </div>
-      <div class="pratos">
-          <h1>Strogonoff</h1>
-          <section style="display: flex;">
-          <img src="img/Strogonoff.jpg" alt="" />
-          <h1>Nosso strogonoff é cremoso, saboroso e servido com arroz soltinho e batata crocante! 🍛🔥</h1>
-          </section>
-      </div>
-      </div>
-      <h1>Babidas</h1>
+
+      <h1>Bebidas</h1>
       <hr style="width: 40%" />
+      <div style="display: flex">
+        <div class="pratos">
+            <h1>Sucos</h1>
+            <section style="display: flex;">
+            <img src="img/suco.png" alt="" />
+            <ul>
+              <li>Suco de Laranja – R$ 7,00</li>
+              <li>Suco de Maracujá – R$ 7,50</li>
+              <li>Suco de Morango – R$ 8,00</li>
+              <li>Suco de Abacaxi com Hortelã – R$ 7,50</li>
+              <li>Suco de Melancia – R$ 7,00</li>
+              <li>Suco de Manga – R$ 7,50</li>
+            </ul>
+            </section>
+        </div>
+        <div class="pratos">
+            <h1>Refigerantes</h1>
+            <section style="display: flex;">
+            <img src="img/Refrigenrantes.jpg" alt="" />
+            <ul>
+              <li>Coca-Cola – R$ 6,00</li>
+              <li>Pepsi – R$ 5,50</li>
+              <li>Fanta Laranja – R$ 5,00</li>
+              <li>Sprite – R$ 5,50</li>
+              <li>Guaraná Antártica – R$ 5,50</li>
+            </ul>
+            </section>
+        </div>
+      </div>
+      
       <h1>Sobremesas</h1>
       <hr style="width: 40%" />
+      <div style="display: flex">
+        <div class="pratos">
+            <h1>Pudim de Leite</h1>
+            <section style="display: flex;">
+            <img src="img/pudim.jpg" alt="" />
+            <h1>Cremoso, caramelizado, derrete na boca e tem sabor irresistível! 🍮 R$9,00 </h1>
+            </section>
+        </div>
+        <div class="pratos">
+            <h1>Brownie com Sorvete</h1>
+            <section style="display: flex;">
+            <img src="img/brownie.jpg" alt="" />
+            <h1>Chocolate intenso, crocante por fora, macio por dentro, servido com sorvete! 🍫🍨 R$12,00 </h1>
+            </section>
+        </div>
+      </div>
     </main>
     <footer>
       <h1>Copyright © 2025 Todos os direitos reservados</h1>
