--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <h1>TopDelicias</h1>
         <ul class="menu">
           <li>Início</li>
-          <li>Cardápio</li>
-          <li>Contato</li>
-          <li>Reservas</li>
+          <li><a href="cardapio.html">Cardápio</a></li>
+          <li><a href="contato.html">Contat</a>o</li>
+          <li><a href="reserva.html">Reservas</a></li>
         </ul>
       </div>
       <div style="display: flex">
@@ -36,7 +36,7 @@
         </div>
         <div style="width: 500px">
           <img src="img/fotoHome.jpg" alt="" id="imgINIT" />
-          <img src="img/buttonStart.png" alt="" id="buttonStart" />
+          <a href="cardapio.html"><img src="img/buttonStart.png" alt="" id="buttonStart" /></a>
         </div>
       </div>
     </header>
@@ -63,12 +63,11 @@
     </main>
     <footer>
       <h1>Copyright © 2025 Todos os direitos reservados</h1>
-      <ul class="menu">
-        <li>Início</li>
-        <li>Cardápio</li>
-        <li>Contato</li>
-        <li>Reservas</li>
-      </ul>
+      <div id="midias">
+        <a href="https://www.instagram.com/" target="_blank"><img src="img/instagram.png" alt=""></a>
+        <a href="https://www.whatsapp.com/?lang=pt_BR" target="_blank"><img src="img/whatsapp.png" alt=""></a>
+        <a href="https://www.facebook.com/?locale=pt_BR" target="_blank"><img src="img/facebook.png" alt=""></a>
+      </div>
     </footer>
   </body>
 </html>
