--- a/cardapio.html
+++ b/cardapio.html
@@ -17,13 +17,13 @@
   <body>
     <header>
       <div id="headerFunc">
-        <img src="img/logo.png" alt="" id="logo" />
+        <a href="index.html"><img src="img/logo.png" alt="" id="logo"/></a>
         <h1>Cardapio</h1>
         <ul class="menu">
-          <li>Início</li>
+          <li><a href="index.html">Início</a></li>
           <li>Cardápio</li>
-          <li>Contato</li>
-          <li>Reservas</li>
+          <li><a href="contato.html">Contato</a></li>
+          <li><a href="reserva.html">Reservas</a></li>
         </ul>
       </div>
     </header>
@@ -116,12 +116,11 @@
     </main>
     <footer>
       <h1>Copyright © 2025 Todos os direitos reservados</h1>
-      <ul class="menu">
-        <li>Início</li>
-        <li>Cardápio</li>
-        <li>Contato</li>
-        <li>Reservas</li>
-      </ul>
+      <div id="midias">
+        <a href="https://www.instagram.com/" target="_blank"><img src="img/instagram.png" alt=""></a>
+        <a href="https://www.whatsapp.com/?lang=pt_BR" target="_blank"><img src="img/whatsapp.png" alt=""></a>
+        <a href="https://www.facebook.com/?locale=pt_BR" target="_blank"><img src="img/facebook.png" alt=""></a>
+      </div>
     </footer>
   </body>
 </html>
