--- a/cardapio.html
+++ b/cardapio.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TopDelicias</title>
+  
     <link rel="stylesheet" href="css/styleCardapio.css" />
     <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon" />
-
+ <!--Importa fontes Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,6 +17,7 @@
   </head>
   <body>
     <header>
+      <!--Menu-->
       <div id="headerFunc">
         <a href="index.html"><img src="img/logo.png" alt="" id="logo"/></a>
         <h1>Cardapio</h1>
@@ -28,6 +30,7 @@
       </div>
     </header>
     <main>
+      <!--Seção de Pratos Principais-->
       <h1>Pratos Principais</h1>
       <hr style="width: 40%" />
       <div style="display: flex">
@@ -63,6 +66,7 @@
         </div>
       </div>
 
+      <!--Seção de Bebidas-->
       <h1>Bebidas</h1>
       <hr style="width: 40%" />
       <div style="display: flex">
@@ -71,12 +75,14 @@
             <section style="display: flex;">
             <img src="img/suco.png" alt="" />
             <ul>
-              <li>Suco de Laranja – R$ 7,00</li>
-              <li>Suco de Maracujá – R$ 7,50</li>
-              <li>Suco de Morango – R$ 8,00</li>
-              <li>Suco de Abacaxi com Hortelã – R$ 7,50</li>
-              <li>Suco de Melancia – R$ 7,00</li>
-              <li>Suco de Manga – R$ 7,50</li>
+              <strong>
+                <li>Suco de Laranja – R$ 7,00</li>
+                <li>Suco de Maracujá – R$ 7,50</li>
+                <li>Suco de Morango – R$ 8,00</li>
+                <li>Suco de Abacaxi com Hortelã – R$ 7,50</li>
+                <li>Suco de Melancia – R$ 7,00</li>
+                <li>Suco de Manga – R$ 7,50</li>
+              </strong>
             </ul>
             </section>
         </div>
@@ -85,16 +91,19 @@
             <section style="display: flex;">
             <img src="img/Refrigenrantes.jpg" alt="" />
             <ul>
-              <li>Coca-Cola – R$ 6,00</li>
-              <li>Pepsi – R$ 5,50</li>
-              <li>Fanta Laranja – R$ 5,00</li>
-              <li>Sprite – R$ 5,50</li>
-              <li>Guaraná Antártica – R$ 5,50</li>
+              <strong>
+                <li>Coca-Cola – R$ 6,00</li>
+                <li>Pepsi – R$ 5,50</li>
+                <li>Fanta Laranja – R$ 5,00</li>
+                <li>Sprite – R$ 5,50</li>
+                <li>Guaraná Antártica – R$ 5,50</li>
+              </strong>
             </ul>
             </section>
         </div>
       </div>
       
+      <!--Seção de Sobremesas-->
       <h1>Sobremesas</h1>
       <hr style="width: 40%" />
       <div style="display: flex">
@@ -117,6 +126,7 @@
     <footer>
       <h1>Copyright © 2025 Todos os direitos reservados</h1>
       <div id="midias">
+        <!--Links de redes sociais-->
         <a href="https://www.instagram.com/" target="_blank"><img src="img/instagram.png" alt=""></a>
         <a href="https://www.whatsapp.com/?lang=pt_BR" target="_blank"><img src="img/whatsapp.png" alt=""></a>
         <a href="https://www.facebook.com/?locale=pt_BR" target="_blank"><img src="img/facebook.png" alt=""></a>
