--- a/contato.html
+++ b/contato.html
@@ -6,7 +6,7 @@
     <title>TopDelicias</title>
     <link rel="stylesheet" href="css/styleContato.css" />
     <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon" />
-
+ <!--Importa fontes Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,6 +16,7 @@
   </head>
   <body>
     <header>
+      <!--Menu-->
       <div id="headerFunc">
         <a href="index.html"><img src="img/logo.png" alt="" id="logo"/></a>
         <h1>Contato</h1>
@@ -28,6 +29,7 @@
       </div>
     </header>
     <main>
+      <!--Bloco de contatos-->
       <div id="contato-mapa">
         <div id="contato">
           <h1>📍 Endereço: Rua das Sabores, 123 – Centro, Cidade, Estado</h1>
@@ -37,6 +39,8 @@
           <h1>📱 Redes Sociais: @TopDeliciasOficial (Instagram,Facebook)</h1>
           <h1>🕒 Horário de Funcionamento: Segunda a Domingo, das 11h às 23h</h1>
         </div>
+
+        <!--Iframe do Google MPS - API MAPS-->
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d1838.2503223497183!2d-43.25242231720775!3d-22.857957191942265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1srestaurantes!5e0!3m2!1spt-BR!2sbr!4v1738840566637!5m2!1spt-BR!2sbr"
           width="700"
@@ -50,6 +54,7 @@
     </main>
     <footer>
       <h1>Copyright © 2025 Todos os direitos reservados</h1>
+      <!--Links de redes sociais-->
       <div id="midias">
         <a href="https://www.instagram.com/" target="_blank"><img src="img/instagram.png" alt=""></a>
         <a href="https://www.whatsapp.com/?lang=pt_BR" target="_blank"><img src="img/whatsapp.png" alt=""></a>
