--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>TopDelicias</title>
     <link rel="stylesheet" href="css/styleIndex.css" />
     <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon" />
-
+ <!--Importa fontes Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,6 +16,7 @@
   </head>
   <body>
     <header>
+      <!--Menu-->
       <div id="headerFunc">
         <img src="img/logo.png" alt="" id="logo" />
         <h1>TopDelicias</h1>
@@ -26,6 +27,7 @@
           <li><a href="reserva.html">Reservas</a></li>
         </ul>
       </div>
+       <!--Mensagem de Boas Vinda-->
       <div style="display: flex">
         <div id="msg">
           <h1>TopDelicias</h1>
@@ -41,6 +43,7 @@
       </div>
     </header>
     <main>
+      <!--Sugestões iniciais-->
       <h1>Especialidades da Casa</h1>
       <hr style="width: 40%" />
       <div style="display: flex">
@@ -63,6 +66,7 @@
     </main>
     <footer>
       <h1>Copyright © 2025 Todos os direitos reservados</h1>
+      <!--Links de redes sociais-->
       <div id="midias">
         <a href="https://www.instagram.com/" target="_blank"><img src="img/instagram.png" alt=""></a>
         <a href="https://www.whatsapp.com/?lang=pt_BR" target="_blank"><img src="img/whatsapp.png" alt=""></a>
